# tyrotical

./: .gitignore  CMakeLists.txt  README.md
shaders/: shader.frag  shader.frag.spv  shader.vert  shader.vert.spv
src/: Ayanami.cpp  device.cpp  pipeline.cpp  swapchain.cpp  tyrotical.cpp  window.cpp
src/include/: Ayanami.hpp  device.hpp  pipeline.hpp  swapchain.hpp  tyrotical.hpp  window.hpp
